--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* 
+*::-webkit-scrollbar {
+    background-color: auto;
+    color: red;
+    width: 3px;
+} */
+
+::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+    background-color: transparent;
+} 
+::-webkit-scrollbar-thumb {
+
+    background-color: #bebcbc;
+}
+/* ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+} */
+
+/* *{
+    scrollbar-width: 8px;  // auto | thin | none | <length>;
+} */
